--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 					</div>
 				</div>
 				
-				<div class="row sorter-footer info">
-					<div class="col footer-container">
+				<div class="row info">
+					<div class="col">
 						<hr class="row">
 						<div class="row justify-content-center">
 							<a class="mr-1" href="https://www.facebook.com/jun.joe139">Contact</a> | <a class="mx-1" href="https://twitter.com/joe_046">Twitter</a> | <a class="clearsave ml-1">Clear Save Data</a>
