optimized images 9th May 2022

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="og:site_name" content="IkoNoiJoi Favorit Member Sorter">
   <meta name="og:description" content="A simple website for sorting =LOVE, ≠ME & ≒JOY favorit members in a formatted list.">
-  <meta name="og:image" content="src/assets/header_mobile.png">
+  <meta name="og:image" content="src/assets/header_mobile.jpg">
   <title>IkoNoiJoi Favorit Members Sorter</title>
 
   <!-- <link rel="stylesheet" type="text/css" href="src/css/reset.css"> -->
@@ -46,7 +46,7 @@
 	<div class="container">
 		<div class="row header mb-2">
 			<!-- <img class="d-xl-none col-12 px-0" src="src/assets/edit.png"> -->
-			<img class="d-xl-none col-12 px-0" src="src/assets/header_mobile.png">
+			<img class="d-xl-none col-12 px-0" src="src/assets/header_mobile.jpg">
 			<img class="d-none d-xl-block col-12 px-0" src="src/assets/header_wide.png">
 		</div>
 		
