minor script & banner img 10th May 2022

--- a/index.html
+++ b/index.html
@@ -17,14 +17,34 @@
   <link rel="shortcut icon" href="src/assets/favicon.ico" type="image/x-icon">
   <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
   <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="og:site_name" content="IkoNoiJoi Favorit Member Sorter">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="og:site_name" content="IkoNoiJoi Sorter">
   <meta name="og:description" content="A simple website for sorting =LOVE, ≠ME & ≒JOY favorit members in a formatted list.">
-  <meta name="og:image" content="src/assets/header_mobile.jpg">
+  <meta name="og:image" content="src/assets/thumbnail.jpg">
+  
+  <!--  Essential META Tags -->
+  <meta property="og:title" content="IkoNoiJoi Sorter">
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="src/assets/thumbnail.jpg">
+  <meta property="og:url" content="https://https://thesilent33.github.io/ikonoi-sorter.github.io">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:width" content= "..." />
+  <meta name="twitter:image:height" content= "..." />
+
+
+  <!--  Non-Essential, But Recommended -->
+  <meta property="og:description" content="A simple website for sorting =LOVE, ≠ME & ≒JOY favorit members in a formatted list.">
+  <meta property="og:site_name" content="IkoNoiJoi Sorter">
+  <meta name="twitter:image:alt" content="IkoNoiJoi Sorter">
+
+  <!--  Non-Essential, But Required for Analytics -->
+  <!-- <meta property="fb:app_id" content="your_app_id" /> -->
+  <meta name="twitter:site" content="joe_046">
+  
   <title>IkoNoiJoi Favorit Members Sorter</title>
 
   <!-- <link rel="stylesheet" type="text/css" href="src/css/reset.css"> -->
-	<!-- Latest compiled and minified CSS -->
+  <!-- Latest compiled and minified CSS -->
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
   <link rel="stylesheet" type="text/css" href="src/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="src/css/styles.css">
