foother test 12th may 2022

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	</div>
 	<br>
 	<br>
-		<div class="footer">
+		<div class="kaki">
 			
 				<div class="text-center justify-content-center">
 					<a class="-1" href="https://www.facebook.com/jun.joe139">Contact</a> | <a class="mx-1" href="https://twitter.com/joe_046">Twitter</a> | <a class="clearsave ml-1">Clear Save Data</a>
