foother test 12th may 2022

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<iframe class="spotify right d-none" src="" width="80" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 					</div>
 				</div>
-				
+				<br>
 				<div class="row sorter-options">
 					<div class="col options-container">
 						<div class="row options mx-auto"></div>
@@ -165,6 +165,7 @@
 		</div>
 		 -->
 	</div>
+	<!-- <br>
 	<br>
 	<br>
 	<br>
@@ -173,18 +174,19 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
-	<footer>
+	<br> -->
+	
+	<div class="row sorter-footer info">
+		<div class="col footer-container">
 		<div class="text-center justify-content-center">
 			<p><a class="-1" href="https://www.facebook.com/jun.joe139">Contact</a> | <a class="mx-1" href="https://twitter.com/joe_046">Twitter</a> | <a class="clearsave ml-1">Clear Save Data</a></p>
-		<!-- </div>
+		</div>
 		
-		<div class=" justify-content-center "> -->
+		<div class=" justify-content-center ">
 			<p class="text-center ">Sorter for =LOVE, ≠ME & ≒JOY favorit members.</p>
-		<!-- </div>
+		</div>
 		
-		<div class=" justify-content-center "> -->
+		<div class=" justify-content-center ">
 			<p class="text-center ">Hit the Click to Start! button to start sorting. Certain options have details that you can hover to read. Click on the character you like better from the two. If you think there are some errors you can contact me above.</p>
 		</div>
 		
@@ -192,7 +194,8 @@
 		<p class="text-center">Credits for <a href="https://suzukiayane.github.io/nogisorter/"> suzukiayane</a> & <a href="https://github.com/execfera/charasort/">execfera</a> for the source code.</p>
 
 		<p class=" text-center">12th May, 2022 - IkoNoiJoi Sorter by Jun Joe/純ジョー</p>
-	</footer>
+	</div>
+	</div>
 		
 </body>
 
