--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	<br>
 	<br> -->
 	
-	<footer>
+	<footer class="container">
 		<div class="text-center justify-content-center">
 			<p><a class="-1" href="https://www.facebook.com/jun.joe139">Contact</a> | <a class="mx-1" href="https://twitter.com/joe_046">Twitter</a> | <a class="clearsave ml-1">Clear Save Data</a></p>
 		<!-- </div>
