--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 		 -->
 		 
 	</div>
+	<!-- <br>
 	<br>
 	<br>
 	<br>
@@ -175,12 +176,11 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
+	<br> -->
 	
 	
 	
-	<footer class="container">
+	<footer class="options">
 		<div class="text-center justify-content-center">
 			<p><a class="-1" href="https://www.facebook.com/jun.joe139">Contact</a> | <a class="mx-1" href="https://twitter.com/joe_046">Twitter</a> | <a class="clearsave ml-1">Clear Save Data</a></p>
 		<!-- </div>
