updated footer 12th May 2022

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 
 <body>
-	<!-- <div class="container"> -->
+	<div class="container">
 		<div class="row header mb-2">
 			<!-- <img class="d-xl-none col-12 px-0" src="src/assets/edit.png"> -->
 			<img class="d-xl-none col-12 px-0" src="src/assets/header_mobile.jpg">
@@ -166,7 +166,7 @@
 		</div>
 		 -->
 		 
-	<!-- </div> -->
+	</div>
 	<!-- <br>
 	<br>
 	<br>
