updated footer 13th May 2022

--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 	<br>
 	<br> -->
 	
-	<div class="sticky">
+	<footer>
+	<!-- <div class="sticky"> -->
 		<div class="text-center justify-content-center">
 			<p><a class="-1" href="https://www.facebook.com/jun.joe139">Contact</a> | <a class="mx-1" href="https://twitter.com/joe_046">Twitter</a> | <a class="clearsave ml-1">Clear Save Data</a></p>
 		<!-- </div>
@@ -195,7 +196,8 @@
 		<p class="text-center">Credits for <a href="https://suzukiayane.github.io/nogisorter/"> suzukiayane</a> & <a href="https://github.com/execfera/charasort/">execfera</a> for the source code.</p>
 
 		<p class=" text-center">13th May, 2022 - IkoNoiJoi Sorter by Jun Joe/純ジョー</p>
-	</div>
+	</footer>
+	<!-- </div> -->
 		
 </body>
 
