--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
 	<br>
 	<br> -->
 	<!-- <div class="main"> -->
+	<div class="info">
+	</div>
 	<footer>
 	<!-- <div class="sticky"> -->
 		<div class="text-center justify-content-center">
@@ -200,7 +202,7 @@
 		
 		<p class="text-center">Credits for <a href="https://suzukiayane.github.io/nogisorter/"> suzukiayane</a> & <a href="https://github.com/execfera/charasort/">execfera</a> for the source code.</p>
 
-		<p class=" text-center">13th May, 2022 - IkoNoiJoi Sorter by Jun Joe/純ジョー</p>
+		<p class=" text-center">14th May, 2022 - IkoNoiJoi Sorter by Jun Joe/純ジョー</p>
 	<!-- </div> -->
 	</footer>
 	<!-- </div> -->
